🐛 Fix overlapping status banner

--- a/frontend/scss/components/molecules/pixi-status-intro.scss
+++ b/frontend/scss/components/molecules/pixi-status-intro.scss
@@ -10,6 +10,7 @@
 
   &-text {
     max-width: 720px;
+    min-height: 220px;
     padding: 0 15px;
     color: safeColor('white');
     line-height: 1.625;
