--- a/frontend/scss/components/templates/pixi.scss
+++ b/frontend/scss/components/templates/pixi.scss
@@ -140,16 +140,15 @@
     &-reports {
       grid-column: 1/25;
       margin: 57px 0;
-      padding: 60px 15px 0px 15px;
+      padding: 100px 15px 0 15px;
 
       @media (min-width: 768px) {
         margin: 57px 15px;
-        padding: 60px 15px 0 15px;
       }
 
       @media (min-width: 1024px) {
         margin: 57px 15px;
-        padding: 60px 0 0 0;
+        padding: 100px 0 0 0;
       }
 
       &-title {
